--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,36 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #fff;
+    --foreground: #101010;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+
+    --color-brand-primary: #ff8b33;
+    --color-text-secondary: #c8c8c8;
+    --color-lighter-background: #141414;
+
+    --font-sora: "Sora", sans-serif;
+    --font-italiana: "Italiana", serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* Light theme (default) */
+.light {
+    --background: #ffffff;
+    --foreground: #101010;
+}
+
+/* Dark theme */
+.dark {
+    --background: #101010;
+    --foreground: #ebebeb;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: "Sora", Helvetica, sans-serif;
 }
