--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,9 +9,9 @@
     --color-background: var(--background);
     --color-foreground: var(--foreground);
 
-    --color-brand-primary: #ff8b33;
-    --color-text-secondary: #c8c8c8;
-    --color-lighter-background: #141414;
+    --color-brand-primary: var(--brand-primary);
+    --color-text-secondary: var(--text-secondary);
+    --color-background-secondary: var(--background-secondary);
 
     --font-sora: "Sora", sans-serif;
     --font-italiana: "Italiana", serif;
@@ -21,12 +21,18 @@
 .light {
     --background: #ffffff;
     --foreground: #101010;
+    --brand-primary: #e96500;
+    --text-secondary: #141414;
+    --background-secondary: #fcfcfc;
 }
 
 /* Dark theme */
 .dark {
     --background: #101010;
     --foreground: #ebebeb;
+    --brand-primary: #ff8b33;
+    --text-secondary: #c8c8c8;
+    --background-secondary: #141414;
 }
 
 body {
