--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,15 @@
 :root {
     --background: #fff;
     --foreground: #101010;
+    --brand-primary: #e96500;
+    --text-secondary: #141414;
+    --background-secondary: #fcfcfc;
+    --background-tertiary: #eeeeee;
 }
 
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
-
     --color-brand-primary: var(--brand-primary);
     --color-text-secondary: var(--text-secondary);
     --color-background-secondary: var(--background-secondary);
