finished the home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
     --color-brand-primary: var(--brand-primary);
     --color-text-secondary: var(--text-secondary);
     --color-background-secondary: var(--background-secondary);
+    --color-background-tertiary: var(--background-tertiary);
 
     --font-sora: "Sora", sans-serif;
     --font-italiana: "Italiana", serif;
