added some animations

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,8 @@ body {
     color: var(--foreground);
     font-family: "Sora", Helvetica, sans-serif;
 }
+
+html {
+    @apply scroll-smooth;
+    scroll-behavior: smooth !important;
+}
