made the scroll bar beautiful, appears we have some problems rendering on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,4 +50,9 @@ body {
 html {
     @apply scroll-smooth;
     scroll-behavior: smooth !important;
+    scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
 }
